--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles.css">
+    <icon href="favicon.ico">
 </head>
 <body>
     <div id="background"></div>
@@ -19,6 +20,7 @@
             <h2>Edit Links</h2>
             <p>Enter a single URL or comma-separated list of URLs for each key:</p>
             <div id="editForm"></div>
+            <p>Hint: use website.com[https://images.com/better-icon.png] for custom images.</p>
             <button id="saveButton">Save</button>
             <button id="cancelButton">Cancel</button>
         </div>
