background customisability and other fixes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles.css">
-    <icon href="favicon.ico">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div id="background"></div>
     <div id="content">
@@ -20,11 +22,13 @@
             <h2>Edit Links</h2>
             <p>Enter a single URL or comma-separated list of URLs for each key:</p>
             <div id="editForm"></div>
-            <p>Hint: use website.com[https://images.com/better-icon.png] for custom images.</p>
+            <p>Hint: use https://website.com[https://images.com/better-icon.png] to use custom icons. You can control
+                the background with the "BG" entry.</p>
             <button id="saveButton">Save</button>
             <button id="cancelButton">Cancel</button>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
